add new version

--- a/tenant-portal-frontend/src/assets/i18n/de.json
+++ b/tenant-portal-frontend/src/assets/i18n/de.json
@@ -21,7 +21,8 @@
   },
   "TABS": {
     "DASHBOARDS": "Dashboards",
-    "REPORTS": "Berichte"
+    "REPORTS": "Berichte",
+    "PROFILE" : "Profil"
   },
   "DASHBOARDS": {
     "TITLE": "Dashboards",
