--- a/tenant-portal-frontend/src/assets/i18n/en.json
+++ b/tenant-portal-frontend/src/assets/i18n/en.json
@@ -21,7 +21,8 @@
   },
   "TABS": {
     "DASHBOARDS": "Dashboards",
-    "REPORTS": "Reports"
+    "REPORTS": "Reports",
+    "PROFILE" : "Profile"
   },
   "DASHBOARDS": {
     "TITLE": "Dashboards",
